[project]
name = "flowin"
version = "0.1.0"
description = "A CLI to help manage Git Flow, built with Typer."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "MarcelloBB" }]
dependencies = [
    "typer>=0.12.0",
]

[project.urls]
Repository = "https://github.com/MarcelloBB/flowin"

[project.scripts]
flowin = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
